# PE-Parser

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sh.exe.stackdump
cmake/: PE-ParserConfig.cmake.in  UpdateSubmodules.cmake
dependencies/: CMakeLists.txt
include/: Buffer.hpp  Converter.hpp  PEFile.hpp  Parser.hpp  Structure.hpp
include/PE-Parser/: Buffer.hpp  Converter.hpp  PEFile.hpp  Parser.hpp  Structure.hpp  better_braces.hpp
source/: Buffer.cpp  Converter.cpp  PEFile.cpp  Parser.cpp
tests/: AllTests.cpp  BufferTests.cpp  CMakeLists.txt  ConverterTests.cpp  ParseTests.cpp  ParserTests.cpp  Test.cpp
